--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -12,7 +12,13 @@ requirements:
     - setuptools_scm
   run:
     - python>=3.9
-
+    - ess-streaming-data-types
+    - numpy
+    - plopp
+    - rich
+    - sciline
+    - scipp
+    - scippneutron
 test:
   imports:
     - beamlime
