--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -28,7 +28,8 @@ test:
     - pyproject.toml
     - tests/
   commands:
-    - python -m pytest tests
+    # We ignore warnings during release package builds
+    - python -m pytest -Wignore tests
 
 build:
   noarch: python
