--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,7 @@ addopts = """
 testpaths = "tests"
 filterwarnings = [
   "error",
+  'ignore:\n.*Sentinel is not a public part of the traitlets API.*:DeprecationWarning',
 ]
 pythonpath = "tests/helpers"
 
