--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -17,7 +17,7 @@ requirements:
     - setuptools_scm
   run:
     - rich
-    - scippneutron>=24.03.0
+    - essreduce
     - python>=3.10
 
   {% for package in dependencies %}
