--- a/pyproject.toml
+++ b/pyproject.toml
@@ -112,4 +112,4 @@ enable_error_code = [
 warn_unreachable = true
 
 [project.entry-points."beamlime.stateless"]
-dummy = "beamlime.stateless_workflow:dummy_workflow"
+dummy_stateless = "beamlime.workflow_protocols:dummy_stateless_workflow"
