--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ requires-python = ">=3.10"
 # Make sure to list one dependency per line.
 dependencies = [
   "rich",
-  "essreduce",
+  "essreduce>=24.10.3",
   "confluent_kafka",
   "ess-streaming-data-types"
 ]
