--- a/docker-compose-reduction.yml
+++ b/docker-compose-reduction.yml
@@ -1,9 +1,13 @@
+name: beamlime-kafka
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
     container_name: kafka-zookeeper
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+      ZOOKEEPER_MAX_CLIENT_CNXNS: 20
+    mem_limit: 512M
 
   kafka:
     image: confluentinc/cp-kafka:latest
@@ -13,35 +17,48 @@ services:
     ports:
       - "9092:9092"
     environment:
+      KAFKA_CONFLUENT_SUPPORT_METRICS_ENABLE: false
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
       KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092,PLAINTEXT_INTERNAL://0.0.0.0:29092
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092,PLAINTEXT_INTERNAL://kafka:29092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      # Performance optimizations for local development
+      KAFKA_NUM_PARTITIONS: 1
+      KAFKA_NUM_RECOVERY_THREADS_PER_DATA_DIR: 1
+      KAFKA_NUM_NETWORK_THREADS: 2
+      KAFKA_NUM_IO_THREADS: 4
+      KAFKA_SOCKET_SEND_BUFFER_BYTES: 102400
+      KAFKA_SOCKET_RECEIVE_BUFFER_BYTES: 102400
+      KAFKA_SOCKET_REQUEST_MAX_BYTES: 104857600
+      KAFKA_MAX_CONNECTIONS_PER_IP: 20
+      # Memory settings
+      KAFKA_HEAP_OPTS: "-Xmx512M -Xms512M"
       # Disk usage limits
       KAFKA_LOG_RETENTION_BYTES: 1073741824  # 1GB total retention
       KAFKA_LOG_RETENTION_HOURS: 1           # Keep logs for 1 hours
       KAFKA_LOG_SEGMENT_BYTES: 268435456     # 256MB per segment
       KAFKA_LOG_CLEANUP_POLICY: delete       # Delete old segments
       KAFKA_LOG_CLEANER_MIN_CLEANABLE_RATIO: 0.5
-      KAFKA_LOG_RETENTION_CHECK_INTERVAL_MS: 120000  # Check every 2 minutes
+      KAFKA_LOG_RETENTION_CHECK_INTERVAL_MS: 300000  # Check every 5 minutes
+    mem_limit: 1G
     healthcheck:
       test: ["CMD", "kafka-topics", "--bootstrap-server", "localhost:9092", "--list"]
       interval: 30s
       timeout: 10s
       retries: 3
 
-  schema-registry:
-    image: confluentinc/cp-schema-registry:latest
-    container_name: kafka-schema-registry
-    depends_on:
-      kafka:
-        condition: service_healthy
-    ports:
-      - "8081:8081"
-    environment:
-      SCHEMA_REGISTRY_HOST_NAME: schema-registry
-      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: kafka:29092
-      SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
-      SCHEMA_REGISTRY_COMPATIBILITY_LEVEL: FORWARD
+  #schema-registry:
+  #  image: confluentinc/cp-schema-registry:latest
+  #  container_name: kafka-schema-registry
+  #  depends_on:
+  #    kafka:
+  #      condition: service_healthy
+  #  ports:
+  #    - "8081:8081"
+  #  environment:
+  #    SCHEMA_REGISTRY_HOST_NAME: schema-registry
+  #    SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: kafka:29092
+  #    SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
+  #    SCHEMA_REGISTRY_COMPATIBILITY_LEVEL: FORWARD
