--- a/docker-compose-reduction.yml
+++ b/docker-compose-reduction.yml
@@ -29,10 +29,10 @@ services:
       KAFKA_NUM_RECOVERY_THREADS_PER_DATA_DIR: 1
       KAFKA_NUM_NETWORK_THREADS: 2
       KAFKA_NUM_IO_THREADS: 4
-      KAFKA_SOCKET_SEND_BUFFER_BYTES: 102400
-      KAFKA_SOCKET_RECEIVE_BUFFER_BYTES: 102400
+      KAFKA_SOCKET_SEND_BUFFER_BYTES: 104857600
+      KAFKA_SOCKET_RECEIVE_BUFFER_BYTES: 104857600
       KAFKA_SOCKET_REQUEST_MAX_BYTES: 104857600
-      KAFKA_MAX_CONNECTIONS_PER_IP: 20
+      KAFKA_MAX_CONNECTIONS_PER_IP: 100
       # Memory settings
       KAFKA_HEAP_OPTS: "-Xmx512M -Xms512M"
       # Disk usage limits
@@ -42,6 +42,12 @@ services:
       KAFKA_LOG_CLEANUP_POLICY: delete       # Delete old segments
       KAFKA_LOG_CLEANER_MIN_CLEANABLE_RATIO: 0.5
       KAFKA_LOG_RETENTION_CHECK_INTERVAL_MS: 300000  # Check every 5 minutes
+      KAFKA_MESSAGE_MAX_BYTES: 20971520          # 20MB
+      KAFKA_REPLICA_FETCH_MAX_BYTES: 20971520    # 20MB
+      KAFKA_REPLICA_SOCKET_RECEIVE_BUFFER_BYTES: 20971520
+      KAFKA_FETCH_MESSAGE_MAX_BYTES: 20971520    # 20MB
+      KAFKA_MAX_REQUEST_SIZE: 20971520           # 20MB
+      KAFKA_MAX_PARTITION_FETCH_BYTES: 20971520  # 20MB
     mem_limit: 1G
     healthcheck:
       test: ["CMD", "kafka-topics", "--bootstrap-server", "localhost:9092", "--list"]
