--- a/.github/workflows/browser-test.yml
+++ b/.github/workflows/browser-test.yml
@@ -1,38 +1,16 @@
 name: Browser Test
 
 on:
-  workflow_dispatch:
-    inputs:
-      os-variant:
-        default: 'ubuntu-22.04'
-        type: string
-      python-version:
-        type: string
-      checkout_ref:
-        default: ''
-        type: string
-  workflow_call:
-    inputs:
-      os-variant:
-        default: 'ubuntu-22.04'
-        type: string
-      python-version:
-        type: string
-      checkout_ref:
-        default: ''
-        type: string
   pull_request:
 
 jobs:
   browser-test:
-    runs-on: ${{ inputs.os-variant }}
+    runs-on: 'ubuntu-22.04'
     steps:
       - uses: actions/checkout@v4
-        with:
-          ref: ${{ inputs.checkout_ref }}
       - uses: actions/setup-python@v5
         with:
-          python-version: ${{ inputs.python-version }}
+          python-version: "3.11"
       - run: python -m pip install --upgrade pip
       - run: pip install -r requirements/test.txt
       - run: pip install -r requirements/docs.txt
