--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,10 +38,6 @@ dependencies = [
 
 dynamic = ["version"]
 
-[project.scripts]
-beamlime = "beamlime.__main__:main"
-beamlime-raw-detectors = "beamlime.executables.show_detector:main"
-
 [project.urls]
 "Bug Tracker" = "https://github.com/scipp/beamlime/issues"
 "Documentation" = "https://scipp.github.io/beamlime"
@@ -63,7 +59,7 @@ filterwarnings = [
   "error",
   'ignore:\n.*Sentinel is not a public part of the traitlets API.*:DeprecationWarning',
 ]
-pythonpath = "tests/helpers"
+pythonpath = "tests"
 asyncio_mode = "auto"
 
 [tool.ruff]
