--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,13 @@ dynamic = ["version"]
 "Documentation" = "https://scipp.github.io/beamlime"
 "Source" = "https://github.com/scipp/beamlime"
 
+[project.optional-dependencies]
+dashboard = [
+  "dash",
+  "gunicorn",
+  "plotly",
+]
+
 [tool.setuptools_scm]
 
 [tool.pytest.ini_options]
