--- a/docker-compose-beamlime.yml
+++ b/docker-compose-beamlime.yml
@@ -66,6 +66,8 @@ services:
     command: ["sh", "/scripts/setup-kafka-topics.sh", "${BEAMLIME_INSTRUMENT:-dummy}"]
 
   fake-producer:
+    profiles:
+      - dev  # Only run fake producer with `docker compose --profile dev up`
     image: python:3.12
     container_name: fake-producer
     depends_on:
@@ -79,7 +81,11 @@ services:
     environment:
       BEAMLIME_ENV: docker
       BEAMLIME_INSTRUMENT: ${BEAMLIME_INSTRUMENT:-dummy}
-      KAFKA_BROKER: kafka:29092
+      KAFKA_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS:-kafka:29092}
+      KAFKA_SECURITY_PROTOCOL: ${KAFKA_SECURITY_PROTOCOL:-PLAINTEXT}
+      KAFKA_SASL_MECHANISM: ${KAFKA_SASL_MECHANISM:-SCRAM-SHA-256}
+      KAFKA_SASL_USERNAME: ${KAFKA_SASL_USERNAME:-DUMMY}
+      KAFKA_SASL_PASSWORD: ${KAFKA_SASL_PASSWORD:-DUMMY}
     command: sh -c "python -m pip install -e . && python -m beamlime.services.fake_producer --mode ev44 --instrument $BEAMLIME_INSTRUMENT"
 
   monitor-data:
@@ -96,8 +102,16 @@ services:
     environment:
       BEAMLIME_ENV: docker
       BEAMLIME_INSTRUMENT: ${BEAMLIME_INSTRUMENT:-dummy}
-      KAFKA_BROKER: kafka:29092
-      KAFKA_BROKER_BEAMLIME: kafka:29092
+      KAFKA_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS:-kafka:29092}
+      KAFKA_SECURITY_PROTOCOL: ${KAFKA_SECURITY_PROTOCOL:-PLAINTEXT}
+      KAFKA_SASL_MECHANISM: ${KAFKA_SASL_MECHANISM:-SCRAM-SHA-256}
+      KAFKA_SASL_USERNAME: ${KAFKA_SASL_USERNAME:-DUMMY}
+      KAFKA_SASL_PASSWORD: ${KAFKA_SASL_PASSWORD:-DUMMY}
+      KAFKA2_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS:-kafka:29092}
+      KAFKA2_SECURITY_PROTOCOL: ${KAFKA_SECURITY_PROTOCOL:-PLAINTEXT}
+      KAFKA2_SASL_MECHANISM: ${KAFKA_SASL_MECHANISM:-SCRAM-SHA-256}
+      KAFKA2_SASL_USERNAME: ${KAFKA_SASL_USERNAME:-DUMMY}
+      KAFKA2_SASL_PASSWORD: ${KAFKA_SASL_PASSWORD:-DUMMY}
     command: sh -c "python -m pip install -e . && python -m beamlime.services.monitor_data --instrument $BEAMLIME_INSTRUMENT"
 
   dashboard:
@@ -116,6 +130,14 @@ services:
     environment:
       BEAMLIME_ENV: docker
       BEAMLIME_INSTRUMENT: ${BEAMLIME_INSTRUMENT:-dummy}
-      KAFKA_BROKER: kafka:29092
-      KAFKA_BROKER_BEAMLIME: kafka:29092
+      KAFKA_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS:-kafka:29092}
+      KAFKA_SECURITY_PROTOCOL: ${KAFKA_SECURITY_PROTOCOL:-PLAINTEXT}
+      KAFKA_SASL_MECHANISM: ${KAFKA_SASL_MECHANISM:-SCRAM-SHA-256}
+      KAFKA_SASL_USERNAME: ${KAFKA_SASL_USERNAME:-DUMMY}
+      KAFKA_SASL_PASSWORD: ${KAFKA_SASL_PASSWORD:-DUMMY}
+      KAFKA2_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS:-kafka:29092}
+      KAFKA2_SECURITY_PROTOCOL: ${KAFKA_SECURITY_PROTOCOL:-PLAINTEXT}
+      KAFKA2_SASL_MECHANISM: ${KAFKA_SASL_MECHANISM:-SCRAM-SHA-256}
+      KAFKA2_SASL_USERNAME: ${KAFKA_SASL_USERNAME:-DUMMY}
+      KAFKA2_SASL_PASSWORD: ${KAFKA_SASL_PASSWORD:-DUMMY}
     command: sh -c "python -m pip install -e .[dashboard] && gunicorn beamlime.services.wsgi:application -b 0.0.0.0:8000"
