--- a/docker-compose-beamlime.yml
+++ b/docker-compose-beamlime.yml
@@ -65,11 +65,11 @@ services:
       - ./scripts:/scripts
     command: ["sh", "/scripts/setup-kafka-topics.sh", "${BEAMLIME_INSTRUMENT:-dummy}"]
 
-  fake-producer:
+  fake-monitors:
     profiles:
       - monitor  # Only run fake producer with `docker compose --profile monitor up`
     image: python:3.12
-    container_name: fake-producer
+    container_name: fake-monitors
     depends_on:
       init-kafka:
         condition: service_completed_successfully
@@ -86,13 +86,13 @@ services:
       KAFKA_SASL_MECHANISM: ${KAFKA_SASL_MECHANISM:-SCRAM-SHA-256}
       KAFKA_SASL_USERNAME: ${KAFKA_SASL_USERNAME:-DUMMY}
       KAFKA_SASL_PASSWORD: ${KAFKA_SASL_PASSWORD:-DUMMY}
-    command: sh -c "python -m pip install -e . && python -m beamlime.services.fake_producer --mode ev44 --instrument $BEAMLIME_INSTRUMENT"
+    command: sh -c "python -m pip install -e . && python -m beamlime.services.fake_monitors --mode ev44 --instrument $BEAMLIME_INSTRUMENT"
 
-  fake-detector:
+  fake-detectors:
     profiles:
       - detector
     image: python:3.12
-    container_name: fake-detector
+    container_name: fake-detectors
     depends_on:
       init-kafka:
         condition: service_completed_successfully
@@ -109,7 +109,7 @@ services:
       KAFKA_SASL_MECHANISM: ${KAFKA_SASL_MECHANISM:-SCRAM-SHA-256}
       KAFKA_SASL_USERNAME: ${KAFKA_SASL_USERNAME:-DUMMY}
       KAFKA_SASL_PASSWORD: ${KAFKA_SASL_PASSWORD:-DUMMY}
-    command: sh -c "python -m pip install -e . && python -m beamlime.services.fake_detector --instrument $BEAMLIME_INSTRUMENT"
+    command: sh -c "python -m pip install -e . && python -m beamlime.services.fake_detectors --instrument $BEAMLIME_INSTRUMENT"
 
   monitor-data:
     profiles:
